# computationalBiophysicsIITKgp

./: README.md
Assignment1/: CMakeCache.txt  CMakeLists.txt  Makefile  README  README~  assignment1.cpp  cmake_install.cmake  out  out1  pdbRead
Assignment1/ESBTL-1.0-beta01/: exception.txt
Assignment1/ESBTL-1.0-beta01/examples/Advanced/: CMakeLists.txt  coarse_grain.cpp  create_pdbs_from_xtc.cpp  reader.cpp  solvation.cpp  to_xyzr_from_compressed.cpp
Assignment1/ESBTL-1.0-beta01/examples/Simple/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  generic_select  generic_select.cpp  read_models  read_models.cpp  select_in_reader  select_in_reader.cpp  select_in_system  select_in_system.cpp  to_xyzr  to_xyzr.cpp  write_selection  write_selection.cpp
Assignment1/ESBTL-1.0-beta01/examples/Using_CGAL/: CMakeLists.txt  coarse_grain_triang.cpp  triangulation.cpp
Assignment2/: README~  a.out  assignment2.cpp  inputData  outputData
